--- a/docs/my_styles.css
+++ b/docs/my_styles.css
@@ -1,9 +1,24 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #004643;
+  /* background-color: #004643; */
   display: flex;
   justify-content: center;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .banner-image {
@@ -27,21 +42,21 @@ body {
 }
 
 .social-icons a {
-  color: #000000;
+  color: #23a6d5;
   text-decoration: none;
   width: 100px;
   height: 100px;
 }
 
 .link {
-  background-color: #170f04;
+  background-color: #e73c7e;
   display: flex;
   align-items: center;
   padding: 5px;
 }
 
 .link a {
-  color: #001e1d;
+  color: #27ce11;
   text-decoration: none;
   text-align: center;
   flex-grow: 1;
