--- a/docs/my_styles.css
+++ b/docs/my_styles.css
@@ -56,7 +56,7 @@ body {
 }
 
 .link a {
-  color: #27ce11;
+  color: rgb(10, 62, 4);
   text-decoration: none;
   text-align: center;
   flex-grow: 1;
