--- a/docs/my_styles.css
+++ b/docs/my_styles.css
@@ -49,18 +49,40 @@ body {
 }
 
 .link {
-  background-color: #e73c7e;
+  display: inline-block;
+  padding: 0.3em 1.2em;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  color: #ffffff;
+  background-color: #4eb5f1;
+  text-align: center;
+  transition: all 0.2s;
   display: flex;
   align-items: center;
   padding: 5px;
+  text-decoration: none;
 }
 
-.link a {
+.link:hover {
+  background-color: #4095c6;
+}
+@media all and (max-width: 30em) {
+  .link {
+    display: block;
+    margin: 0.2em auto;
+  }
+}
+
+/* .link a {
   color: rgb(10, 62, 4);
   text-decoration: none;
   text-align: center;
   flex-grow: 1;
-}
+} */
 
 .items {
   display: flex;
