--- a/docs/my_styles.css
+++ b/docs/my_styles.css
@@ -85,11 +85,12 @@ body {
 } */
 
 .items {
+  margin: auto;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   gap: 30px;
   max-width: 640px;
-  flex-grow: 1;
 }
 
 .banner {
