--- a/docs/my_styles.css
+++ b/docs/my_styles.css
@@ -1,24 +1,15 @@
 body {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  /* background-color: #004643; */
   display: flex;
   justify-content: center;
+  padding: 40px;
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
 
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+.banner {
+  display: flex;
+  justify-content: center;
 }
 
 .banner-image {
@@ -41,6 +32,11 @@ body {
   justify-content: center;
 }
 
+.social-icons {
+  display: flex;
+  justify-content: space-around;
+}
+
 .social-icons a {
   color: #23a6d5;
   text-decoration: none;
@@ -48,7 +44,7 @@ body {
   height: 100px;
 }
 
-.link {
+.button {
   display: inline-block;
   padding: 0.3em 1.2em;
   margin: 0 0.3em 0.3em 0;
@@ -63,42 +59,24 @@ body {
   transition: all 0.2s;
   display: flex;
   align-items: center;
-  padding: 5px;
-  text-decoration: none;
 }
 
-.link:hover {
+.button:hover {
   background-color: #4095c6;
 }
+
 @media all and (max-width: 30em) {
-  .link {
+  .button {
     display: block;
     margin: 0.2em auto;
   }
 }
 
-/* .link a {
-  color: rgb(10, 62, 4);
-  text-decoration: none;
-  text-align: center;
-  flex-grow: 1;
-} */
-
-.items {
+.item-container {
   margin: auto;
   padding: 30px;
   display: flex;
   flex-direction: column;
   gap: 30px;
   max-width: 640px;
-}
-
-.banner {
-  display: flex;
-  justify-content: center;
-}
-
-.social-icons {
-  display: flex;
-  justify-content: space-around;
 }
