added button style

--- a/docs/my_styles.css
+++ b/docs/my_styles.css
@@ -1,15 +1,33 @@
+/* Even color palette */
+:root {
+  --primary-color: #1abc9c;
+  --secondary-color: #3498db;
+  --tertiary-color: #9b59b6;
+  --quaternary-color: #f1c40f;
+  --quinary-color: #e67e22;
+  --senary-color: #e74c3c;
+}
+
 body {
+  padding-top: 40px;
+  padding-bottom: 40px;
   display: flex;
   justify-content: center;
-  padding: 40px;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(-45deg, var(--primary-color), var(--secondary-color), var(--tertiary-color), var(--quaternary-color), var(--quinary-color), var(--senary-color));
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
 
-.banner {
-  display: flex;
-  justify-content: center;
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .banner-image {
@@ -32,19 +50,24 @@ body {
   justify-content: center;
 }
 
-.social-icons {
-  display: flex;
-  justify-content: space-around;
-}
-
 .social-icons a {
-  color: #23a6d5;
+  color: #fffffe;
   text-decoration: none;
   width: 100px;
   height: 100px;
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
 }
 
-.button {
+.social-icons a:hover {
+  background-color: var(--secondary-color);
+}
+
+.link {
   display: inline-block;
   padding: 0.3em 1.2em;
   margin: 0 0.3em 0.3em 0;
@@ -54,29 +77,40 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   color: #ffffff;
-  background-color: #4eb5f1;
+  background-color: var(--tertiary-color);
   text-align: center;
-  transition: all 0.2s;
+  transition: all 0.2s ease-in-out;
   display: flex;
   align-items: center;
+  padding: 5px;
 }
 
-.button:hover {
-  background-color: #4095c6;
+.link:hover {
+  background-color: var(--quaternary-color);
 }
 
 @media all and (max-width: 30em) {
-  .button {
+  .link {
     display: block;
     margin: 0.2em auto;
   }
 }
 
-.item-container {
+.items {
   margin: auto;
   padding: 30px;
   display: flex;
   flex-direction: column;
   gap: 30px;
   max-width: 640px;
+}
+
+.banner {
+  display: flex;
+  justify-content: center;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: space-around;
 }
