--- a/docs/my_styles.css
+++ b/docs/my_styles.css
@@ -1,19 +1,16 @@
-/* Even color palette */
 :root {
-  --primary-color: #1abc9c;
-  --secondary-color: #3498db;
-  --tertiary-color: #9b59b6;
-  --quaternary-color: #f1c40f;
-  --quinary-color: #e67e22;
-  --senary-color: #e74c3c;
+  --primary-color: #23a6d5;
+  --secondary-color: #4eb5f1;
+  --tertiary-color: #4095c6;
+  --background-gradient: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 }
 
 body {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding: 40px 0;
   display: flex;
   justify-content: center;
-  background: linear-gradient(-45deg, var(--primary-color), var(--secondary-color), var(--tertiary-color), var(--quaternary-color), var(--quinary-color), var(--senary-color));
+  align-items: center;
+  background-image: var(--background-gradient);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
@@ -46,47 +43,31 @@ body {
 
 .name {
   color: #fffffe;
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 
 .social-icons a {
-  color: #fffffe;
+  color: var(--primary-color);
   text-decoration: none;
-  width: 100px;
-  height: 100px;
-  background-color: var(--primary-color);
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.2s ease-in-out;
-}
-
-.social-icons a:hover {
-  background-color: var(--secondary-color);
 }
 
 .link {
   display: inline-block;
   padding: 0.3em 1.2em;
-  margin: 0 0.3em 0.3em 0;
+  margin: 0.3em;
   border-radius: 2em;
   box-sizing: border-box;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   color: #ffffff;
-  background-color: var(--tertiary-color);
+  background-color: var(--secondary-color);
   text-align: center;
-  transition: all 0.2s ease-in-out;
-  display: flex;
-  align-items: center;
-  padding: 5px;
+  transition: all 0.2s;
 }
 
 .link:hover {
-  background-color: var(--quaternary-color);
+  background-color: var(--tertiary-color);
 }
 
 @media all and (max-width: 30em) {
