--- a/docs/my_styles.css
+++ b/docs/my_styles.css
@@ -1,8 +1,12 @@
+/* Global styles */
 :root {
   --primary-color: #23a6d5;
   --secondary-color: #4eb5f1;
-  --tertiary-color: #4095c6;
-  --background-gradient: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  --text-color: #fffffe;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
@@ -10,11 +14,95 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: var(--background-gradient);
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
 
+.banner {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.banner-image {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 200px;
+}
+
+/* Link styles */
+.link {
+  display: inline-block;
+  padding: 0.3em 1.2em;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 2em;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  color: var(--text-color);
+  background-color: var(--secondary-color);
+  text-align: center;
+  transition: all 0.2s;
+}
+
+.link:hover {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+@media all and (max-width: 30em) {
+  .link {
+    display: block;
+    margin: 0.2em auto;
+  }
+}
+
+/* Thumbnail styles */
+.thumbnail {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+/* Name styles */
+.name {
+  color: var(--text-color);
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+/* Social icon styles */
+.social-icons {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+
+.social-icons a {
+  color: var(--primary-color);
+  text-decoration: none;
+  width: 100px;
+  height: 100px;
+}
+
+.social-icons a:hover {
+  color: #fff;
+}
+
+/* Items container styles */
+.items {
+  margin: auto;
+  padding: 0 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  max-width: 640px;
+}
+
+/* Gradient animation */
 @keyframes gradient {
   0% {
     background-position: 0% 50%;
@@ -25,73 +113,4 @@ body {
   100% {
     background-position: 0% 50%;
   }
-}
-
-.banner-image {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 200px;
-}
-
-.thumbnail {
-  width: 48px;
-  height: 48px;
-  border-radius: 48px;
-  object-fit: cover;
-}
-
-.name {
-  color: #fffffe;
-  text-align: center;
-}
-
-.social-icons a {
-  color: var(--primary-color);
-  text-decoration: none;
-}
-
-.link {
-  display: inline-block;
-  padding: 0.3em 1.2em;
-  margin: 0.3em;
-  border-radius: 2em;
-  box-sizing: border-box;
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  color: #ffffff;
-  background-color: var(--secondary-color);
-  text-align: center;
-  transition: all 0.2s;
-}
-
-.link:hover {
-  background-color: var(--tertiary-color);
-}
-
-@media all and (max-width: 30em) {
-  .link {
-    display: block;
-    margin: 0.2em auto;
-  }
-}
-
-.items {
-  margin: auto;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  max-width: 640px;
-}
-
-.banner {
-  display: flex;
-  justify-content: center;
-}
-
-.social-icons {
-  display: flex;
-  justify-content: space-around;
 }
