--- a/docs/my_styles.css
+++ b/docs/my_styles.css
@@ -37,7 +37,7 @@ body {
   align-items: center;
 }
 .link {
-  display: inline-block;
+  display: flex;
   padding: 0.3em 1.2em;
   margin: 0 0.3em 0.3em 0;
   border-radius: 2em;
